# Prawnstar-Blockchain-CPP

./: .gitignore  AccountModel.cpp  AccountModel.hpp  ApiTest.py  ApiTest2.py  Block.cpp  Block.hpp  Blockchain.cpp  Blockchain.hpp  CMakeLists.txt  ClassTemplate_cpp  ClassTemplate_hpp  Doxyfile  Liquidity.py  Lot.cpp  Lot.hpp  Makefile  Message.cpp  Message.hpp  Node.cpp  Node.hpp  NodeApi.cpp  NodeApi.hpp  P2PServer.cpp  PeerDiscoveryHandler.cpp  Prawnstar.cpp  ProofOfStake.cpp  ProofOfStake.hpp  README.md  SocketCommunication.cpp  SocketCommunication.hpp  SocketConnector.cpp  SocketConnector.hpp  Staker.cpp  TODO.md  Transaction.cpp  Transaction.hpp  TransactionPool.cpp  TransactionPool.hpp  Wallet.cpp  (+34 more)
PrawnstarTests/: CMakeLists.txt
PrawnstarTests/tests/: BlockchainTests.cpp  CMakeLists.txt  ProofOfStakeTests.cpp  SomeTests.cpp
cryptopp860/: dh-params.pem  dsa-enc-priv.pem  dsa-params.pem  dsa-priv.pem  dsa-pub.pem  ec-enc-priv.pem  ec-params.pem  ec-priv.pem  ec-pub.pem  example-com.cert.der  example-com.cert.pem  example-com.conf  example-com.key.pem  foobar.pem  rsa-concat.pem  rsa-enc-priv.pem  rsa-eol-cr.pem  rsa-eol-lf.pem  rsa-eol-none.pem  rsa-priv.pem  rsa-pub.pem  rsa-trunc-1.pem  rsa-trunc-2.pem  www-cryptopp-com.cert.pem
dashboard/: package-lock.json  package.json
dashboard/public/: index.html
dashboard/src/: App.css  App.js  AppContext.js  BuySellTransfer.js  Console.js  Home.js  News.js  NodeInfo.js  Prawnstar.js  Stake.js  Transactions.js  Wallet.js  index.js
documentation/html/: _account_model_8hpp_source.html  _block_8hpp_source.html  _blockchain_8hpp_source.html  _lot_8hpp_source.html  _message_8hpp_source.html  _node_8hpp_source.html  _node_api_8hpp_source.html  _proof_of_stake_8hpp_source.html  _socket_communication_8hpp_source.html  _socket_connector_8hpp_source.html  _transaction_8hpp_source.html  _transaction_pool_8hpp_source.html  _wallet_8hpp_source.html  annotated.html  class_account_model-members.html  class_account_model.html  class_block-members.html  class_block.html  class_blockchain-members.html  class_blockchain.html  class_lot-members.html  class_lot.html  class_message-members.html  class_message.html  class_node-members.html  class_node.html  class_node_api-members.html  class_node_api.html  class_proof_of_stake-members.html  class_proof_of_stake.html  class_socket_communication-members.html  class_socket_communication.html  class_socket_connector-members.html  class_socket_connector.html  class_transaction-members.html  class_transaction.html  class_transaction_pool-members.html  class_transaction_pool.html  class_wallet-members.html  class_wallet.html  (+26 more)
documentation/latex/: _account_model_8hpp_source.tex  _block_8hpp_source.tex  _blockchain_8hpp_source.tex  _lot_8hpp_source.tex  _message_8hpp_source.tex  _node_8hpp_source.tex  _node_api_8hpp_source.tex  _proof_of_stake_8hpp_source.tex  _socket_communication_8hpp_source.tex  _socket_connector_8hpp_source.tex  _transaction_8hpp_source.tex  _transaction_pool_8hpp_source.tex  _wallet_8hpp_source.tex  annotated.tex  class_account_model.tex  class_block.tex  class_blockchain.tex  class_lot.tex  class_message.tex  class_node.tex  class_node_api.tex  class_proof_of_stake.tex  class_socket_communication.tex  class_socket_connector.tex  class_transaction.tex  class_transaction_pool.tex  class_wallet.tex  config_8hpp_source.tex  crow_8h_source.tex  files.tex  index.tex  md__t_o_d_o.tex  (+10 more)
include/: AccountModel.hpp  Block.hpp  Blockchain.hpp  Lot.hpp  Message.hpp  Node.hpp  NodeApi.hpp  P2PServer.hpp  ProofOfStake.hpp  SocketCommunication.hpp  SocketConnector.hpp  Staker.hpp  Transaction.hpp  TransactionPool.hpp  Wallet.hpp  config.hpp  p2putils.hpp  utils.hpp
scripts/: CMakeLists.txt  Makefile  NUL  a.out  aliceWalletPrivate.ec.der  aliceWalletPublic.ec.der  bobWalletPrivate.ec.der  bobWalletPublic.ec.der  boostserial  boostserial.cpp  classes.cpp  ecGenKeyPair  ecGenKeyPair.cpp  eccCryptoPPTest  eccCryptoPPTest.cpp  eccGenKeyToDisk  eccGenKeyToDisk.cpp  eccGenerateSignVerifyHash  eccGenerateSignVerifyHash.cpp  eccopenssl  eccopenssl.cpp  eccossl  eccossl.cpp  ecctest  ecctest.cpp  ecctest2  ecctest2.cpp  ecprivatekey.pem  exchangePrivate.ec.der  exchangePublic.ec.der  functions.cpp  hashtest  hashtest.cpp  hello.cpp  jsonSerialization.cpp  jsonSerialize  jsontest  jsontest.cpp  liquidity-test  liquidity-test.cpp  (+25 more)
scripts/eccossl.dSYM/Contents/: Info.plist
scripts/eccossl.dSYM/Contents/Resources/DWARF/: eccossl
unused/: Makefile
(+63 files in other folders)
